# brewer

./: .gitignore  Cargo.toml  README.md
docs/: book.toml
docs/src/: getting-started.md
macros/cmdarg_macro_derive/: Cargo.toml
macros/cmdarg_macro_derive/src/: lib.rs
macros/command_macro/: Cargo.toml
macros/command_macro/src/: lib.rs
macros/command_macro_derive/: Cargo.toml
macros/command_macro_derive/src/: lib.rs
macros/config_macro/: Cargo.toml
macros/config_macro/src/: lib.rs
macros/config_macro_derive/: Cargo.toml
macros/config_macro_derive/src/: lib.rs
src/: lib.rs  main.rs  values.rs
src/commands/: mod.rs
src/commands/core/: create.rs  login.rs  mod.rs  register.rs  version.rs
src/commands/core/account/: access.rs  accessto.rs  allow.rs  delete.rs  deny.rs  email.rs  enable.rs  invite.rs  jobs.rs  login.rs  logout.rs  mod.rs  passwd.rs  pwd.rs  regen.rs  register.rs  rename.rs  status.rs  verify.rs  version.rs
src/commands/core/blue/: render.rs
src/commands/core/fs/: clone.rs  cp.rs  exist.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  open.rs  rm.rs  touch.rs  tree.rs  upload.rs  vis.rs
src/commands/core/repo/: bind.rs  clone.rs  mod.rs  pull.rs  push.rs
src/commands/core/tex/: compile.rs  mod.rs  publish.rs  publishes.rs
src/commands/core/util/: clean.rs  mod.rs  version.rs
src/functions/: ansi_colours.rs  duration_as_string.rs  filesize.rs  get_instance.rs  handle_res.rs  ignore_tree.rs  init_logger.rs  instance_or_exit.rs  mod.rs  prompt.rs  readpw.rs  requests.rs  to_strings.rs  tree_show.rs
src/structs/: diff.rs  gmrepo.rs  mod.rs  visibility.rs
src/structs/configs/: creds.rs  gmignore.rs  main.rs  mod.rs
src/tests/: conflict.rs  diff.rs  mod.rs
