[package]
name = "brewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argp = "0.3"
rpassword = "7.2"
reqwest = {version = "0.11", features = ["blocking", "json", "multipart"]}
serde = { version = "1.0", features = ["derive"]}
log = "0.4"
serde_json = "1.0"
env_logger = "0.10"
chrono = "0.4"
ignore = "0.4"
html-escape = "0.2"
serde-inline-default = "0.1"
serde_default = "0.1"
dirs = "5.0"
# ansi_term = "0.12"

command_macro = { path = "macros/command_macro" }
command_macro_derive = { path = "macros/command_macro_derive" }
config_macro = { path = "macros/config_macro" }
config_macro_derive = { path = "macros/config_macro_derive" }
cmdarg_macro_derive = { path = "macros/cmdarg_macro_derive" }

goodmorning-bindings = { git = "https://github.com/gmornin/rust-bindings", rev = "6b5dd7f" }

[features]
default = ["debug"]
debug = []
